# graphics-test

./: .gitignore  CMakeLists.txt
resources/: shader.comp  shader.frag  shader.fsh  shader.vert  shader.vsh
src/: display.cpp  display.hpp  loader.cpp  main.cpp  matrix.hpp  vec.hpp  vector.hpp
src/data/: data.hpp  matrix.hpp  matrix_type.hpp  vec.hpp
src/display/: buffer.hpp  display.cpp  display.hpp  indexlist.cpp  indexlist.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertexarray.cpp  vertexarray.hpp
src/graphics/: buffer.hpp  display.cpp  display.hpp  ebuffer.cpp  ebuffer.hpp  graphics.cpp  graphics.hpp  graphics_int.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertexarray.cpp  vertexarray.hpp
src/loader/: loader.cpp  loader.hpp
tools/: build_loader.cpp
